@@ -1,10 +1,0 @@
-Package: @PACKAGE@-dev
-Version: @VERSION@
-Section: devel
-Priority: optional
-Provides: @PACKAGE@-dev
-Conflicts: @PACKAGE@-dev
-Architecture: @DPKG_VERSION_REPLACED_WITH_SED@
-Depends: @PACKAGE@(=@VERSION@), libcurl4-gnutls-dev, libssl1.0-dev | libssl-dev
-Maintainer: Guardtime <support@guardtime.com>
-Description: KSI C API development library.
