@@ -1,191 +1,0 @@
-libksi (3.15.2306) RELEASED; urgency=low
-
-  * BUGFIX: Fixed creating HmacHasher failure with unimplemented hash algorithm.
-  * BUGFIX: Unable to create KSI_DataHash from digest if algorithm is not implemented.
-  * IMPROVEMENT: Simplified integration test configuration (see integrationtest.conf.sample)
-  * BUGFIX: Fixed KSIEP over TCP failing.
-  * BUGFIX: Fixed clang static analyze findings.
-  * BUGFIX: GNU makefile target 'dist' does not include any unnecessary files to the resulting tarball.
-  * IMPROVEMENT: Debian packaging refactored and fixed.
-  * IMPROVEMENT: ABI version moved from configure.ac to ABI_VERSION file.
-  * IMPROVEMENT: Added KSI_SignatureBuilder_createSignatureWithAggregationChain function.
-  * IMPROVEMENT: Removed calendar-based verification from the default verification policy.
-  * IMPROVEMENT: New verification rule for verifing document hash algorithm.
-  * IMPROVEMENT: Implemented verification of PKI certificate validity during aggregation time.
-  * IMPROVEMENT: Rpm packaging spec file moved from "redhat" to "packaging/redhat".
-  * IMPROVEMENT: Set default PDU version to 2.
-
-libksi (3.14.2207) RELEASED; urgency=low
-
-  * IMPROVEMENT: Unified verifivation error codes. All error code values with single digit are padded with '0' (general error codes have been changed from GEN-* to GEN-0*).
-  * IMPROVEMENT: Refactored TCP client host information lookup by using getaddrinfo instead of gethostbyname.
-  * IMPROVEMENT: Support for integration tests test package.
-  * IMPROVEMENT: Refactored aggregation hash chain chain index continuation verification.
-  * IMPROVEMENT: Added mandatory comments to deprecation macro.
-  * IMPROVEMENT: Returning KSI_UNSUPPORTED_PDU_VERSION in case configured PDU version is not supported for given request.
-  * IMPROVEMENT: Verification of user-provided input hash level.
-  * IMPROVEMENT: Updated signature internal verification sequence.
-  * BUGFIX: Correct extender HMAC setting.
-  * BUGFIX: Added interface for KSI_Header KSI context getter.
-  * IMPROVEMENT: Added KSI_DataHash memory reuse.
-
-libksi (3.13.2043) RELEASED; urgency=low
-
-  * IMPROVEMENT: Functionality to request configurations from extender /
-  aggregator.
-  * BUGFIX: Update publications file client pointer when changinh client.
-  * IMPROVEMENT: Set level correction when input hash level is greater than 0.
-  * IMPROVEMENT: Updated ksi_sign_aggr example.
-  * IMPROVEMENT: HMAC algorithm configuration support for outgoing and incomming
-  messages.
-
-libksi (3.12.2010) RELEASED; urgency=low
-
-  * BUGFIX: Removed internal http pipeline feature.
-  * BUGFIX: The example of KSI_DataHash_create in tutorial/t1_signing.md was missing an argument.
-
-libksi (3.12.2000) RELEASED; urgency=low
-
-  * IMPROVEMENT: Support for adding doxygen generated html files into rpm and debian package.
-  * IMPROVEMENT: Added flag --with-default-pdu-version=version to configure script.
-  * IMPROVEMENT: Improve test support for different PDU version.
-  * BUGFIX: Fixed KSI_TlvElement nested structure serialization issue.
-  * IMPROVEMENT: Updated signature verification procedure. Added new error codes.
-  * IMPROVEMENT: Provide identity information as a list.
-  * IMPROVEMENT: Function KSI_Signature_getSignerIdentity is deprecated. See KSI_Signature_getAggregationHashChainIdentity for replacement.
-  * BUGFIX: Corrected medadata request time parsing.
-  * BUGFIX: Validate list impl pointer before use.
-  * BUGFIX: Cryptoapi KSI_PKISignature_new fails if the input blob can not be parsed.
-  * BUGFIX: CryptoAPI uses PKCS7 signatures embedded intermediate certificates in verification process.
-  * IMPROVEMENT: Internally HTTP connections are reused and pipelined.
-  * IMPROVEMENT: Increased the size of the statically allocated KSI_Integer pool up to the value of 0xff.
-  * IMPROVEMENT: Removed experimental feature KSI_NetworkClient_performAll.
-  * IMPROVEMENT: Removed multi-signature support from the SDK.
-
-libksi (3.10.1893) RELEASED; urgency=low
-
-  * BUGFIX: Disabled cURL from using signals.
-  * IMPROVEMENT: Removed deprecated functions: KSI_TLV_setUintValue, KSI_TLV_fromUint, KSI_TLV_removeNestedTlv
-  * FEATURE: Added support for aggregation and extending PDU version 2.
-
-libksi (3.10.1839) RELEASED; urgency=low
-
-  * IMPROVEMENT: Refactored signature verification step attribute handling.
-  * IMPROVEMENT: Implemented KSI_BlockSigner getter for the hash value of the last leaf in the tree.
-  * BUGFIX: Fixed debian build.
-  * BUGFIX: Reference counting issues fixed.
-  * IMPROVEMENT: Removed support for Windows build combination DLL=dll and RTL=MT(d).
-  * IMPROVEMENT: List macros check for NULL pointers.
-  * BUGFIX: Error message for unknown OID properly reported.
-  * BUGFIX: Userinfo in URLs with unknown schema, incl. http://, is retained for http basic authentication and is not used for KSI authentication.
-  * IMPROVEMENT: Moved signature helper functions from signature.{h,c} into signature_helper.{h,c}
-  * FEATURE: Added signature builder.
-  * IMPROVEMENT: All functions except *List_new and *List_free are now type safe macros.
-  * IMPROVEMENT: Deprecated functions KSI_TLV_setUintValue, KSI_TLV_fromUint and KSI_TLV_removeNestedTlv.
-
-libksi (3.9.1701) RELEASED; urgency=low
-
-  * IMPROVEMENT: Added block signature sample application.
-  * IMPROVEMENT: Removed dead code from http_parser.{c,h}
-  * IMPROVEMENT: Added KSI_verifyDataHash.
-  * IMPROVEMENT: Custom meta-data sepparated from the low-level implementation. Adds padding automatically.
-  * IMPROVEMENT: Metadata hardening verification.
-  * IMPROVEMENT: Removed SHA-224 support.
-  * IMPROVEMENT: Removed Unused function KSI_RDR_verifyEnd.
-  * IMPROVEMENT: PKI truststore initialization is performed on the need basis.
-  * IMPROVEMENT: Added signature verification according to policies.
-  * IMPROVEMENT: Created KSI_HmacHasher interface for incremental HMAC computation.
-  * IMPROVEMENT: Certificate constraints can be set and verified per publications file.
-  * IMPROVEMENT: Add preprocessor parseable version no.
-  * IMPROVEMENT: KSI_receivePublicationsFile must not verify publications file automatically.
-  * BUGFIX: Invalid and misleading exception message on response publication time check.
-  * BUGFIX: Correcting memory leaks when using Windows Crypt32 library.
-  * IMPROVEMENT: Added support for local aggregation.
-  * IMPROVEMENT: Functions KSI_Signature_create* are deprecated and KSI_Signature_sign will replace them.
-  * IMPROVEMENT: Added function KSI_Signature_appendAggregationChain.
-  * IMPROVEMENT: Added function KSI_AggregationHashChain_calculateShape.
-  * IMPROVEMENT: KSI_HashChain_aggregate and KSI_HashChain_aggregateCalendar no longer require not NULL output parameters.
-  * IMPROVEMENT: Added KSI_AggregationHashChain_aggregate function.
-  * BUGFIX: Correcting usage of isForward and isNonCritical flags in KSI_TlvTemplate_serializeObject and KSI_TlvTemplate_writeBytes. Added tests to cover this bug.
-  * IMPROVEMENT: KSI_LIST may contain NULL values.
-  * BUGFIX: Certificate and publication records are not mandatory for publications file.
-  * IMPROVEMENT: Integration tests configuration file error handling improved.
-  * IMPROVEMENT: Handling for reading server responses from tlv files.
-  * BUGFIX: Removed unused function.
-  * BUGFIX: Fixed macro redefinition issue.
-  * BUGFIX: Fixed KSI_Signature_getSigningTime() when signature does not containa calendar chain.
-  * IMPROVEMENT: Created KSI_HmacHasher interface for incremental HMAC computation.
-  * IMPROVEMENT: Added detailed coverage report in html format.
-  * IMPROVEMENT: In case of no errors KSI_ERR_getBaseErrorMessag returns string indicating that there are no errors.
-  * BUGFIX: KSI_ERR_getBaseErrorMessage error code returned by the output parameter fixed when error count is zero.
-  * BUGFIX: KSI_DataHasher memory leak on immediate reset after open.
-  * IMPROVEMENT: Added detailed coverage report in html format.
-  * BUGFIX: Fixed HMAC for hash functions with other than 512 bit internal block size.
-  * IMPROVEMENT: Removed build warnings on OSX.
-  * IMPROVEMENT: Added mechanism to disable deprecation warnings.
-
- -- Guardtime AS <info@guardtime.com>  Mon, 18 Apr 2016 00:00:00 +0200
-
-
-libksi (3.7.1037) UNRELEASED; urgency=low
-
-  * BUGFIX: Fixed building from SRPM
-    Thanks to Peter Portante
-  * BUGFIX: Compilation issues under Fedora 21
-    Thanks to Peter Portante
-  * IMPROVEMENT: Versioning includes 
-  * BUGFIX: KSI_Signature_getDocumentHash fixed when applied to legacy signature.
-  * BUGFIX: KSI_MultiSignature_get fixed when extracting legacy signature.
-  * BUGFIX: KSI_MultiSignature_remove fixed when removing legacy signature.
-
-
-libksi (3.5.1) UNRELEASED; urgency=low
-
-    * Added integration tests.
-    * Refactored internal components. 
-
- -- Guardtime AS <info@guardtime.com>  Thu, 14 May 2015 00:00:00 +0200
-
-libksi (3.4.0.6) RELEASED; urgency=low
-
-    * Added mime-type to http requests.
-
- -- Guardtime AS <info@guardtime.com>  Thu, 14 May 2015 00:00:00 +0200
-
-ibksi (3.4.0.1) RELEASED; urgency=low
-
-    * Removed all default endpoints.
-    * Added multi signature container.
-    * Publications file parsing and verification are now more strict.
-    * Publications file verification customizable.
-    * Added fast tlv parser.
-    * Fixed getLatestPublication and getNearestPublication.
-    * Restructured logging (new log levels).
-    * All size variables changed to size_t.
-    * Hash algorithm id changed from int to KSI_HashAlgorithm.
-    * Debian packaging.
-    * Publications file creation and signing support.
-    * Hashing algorithm RIPEMD-256 removed.
-    * Local aggregation support.
-    * Fixed calendar hash chain calculation.
-
- -- Guardtime AS <info@guardtime.com>  Thu, 14 May 2015 00:00:00 +0200
-
-libksi (3.2.2.1) UNRELEASED; urgency=low
-
-    *TODO.
-
- -- Guardtime AS <info@guardtime.com>  Tue, 19 May 2015 15:11:00 +0200
-
-libksi (3.2.2.0) RELEASED; urgency=low
-
-    * Added functions for signing locally aggregated root hashes.
-    * Added convenience functions for verifying a signature with user provided publication.
-
- -- Guardtime AS <info@guardtime.com>  Thu, 14 May 2015 00:00:00 +0200
-
-libksi (3.2.1.0) RELEASED; urgency=low
-
-    * First public release.
-
- -- Guardtime AS <info@guardtime.com>  Mon, 1 Dec 2015 00:00:00 +0200
